--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;600&family=Sofia+Sans+Semi+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;600&family=Sofia+Sans+Semi+Condensed:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
     <meta charset="utf-8" />
